---
config:
  layout: dagre
---
classDiagram
%% Clase abstracta Material y sus subclases ( una mesa es de madera, una camiseta de tela)
    class Material {
        <<abstract>>
        -Long id
        -String nombre
        -String descripcion
        -boolean delicado
        -Nivel porosidad
        -list<SolucionesLimpieza> soluciones
        -LocalDateTime fechaCreacion
        +getId() Long
        +getNombre() String
        +getDescripcion() String
        +isDelicado() boolean
    }
    class Tela {
        -String tipoFibra
        -boolean lavableMaquina
        -String cuidadosEspeciales
        -int temperaturaMaxima
        -boolean permeabilidad
        -boolean secadoAlAire
        +getTipoFibra() String
        +isLavableMaquina() boolean
        +getCuidadosEspeciales() String
        +getTemperaturaMaxima() int
        -isPermeabilidad() boolean
    }
    class Superficie {
        -String tipoSuperficie
        -boolean resistenteAgua
        -Acabado acabado
        -Nivel porosidad
        +getTipoSuperficie() String
        +isResistenteAgua() boolean
        +getAcabado() String
        +isPoroso() boolean
    }
%% Clase abstracta Sustancia y sus subclases (una mancha es una sustancia que ensucia, un ingrediente es una sustancia que limpia)
    class Sustancia {
        <<abstract>>
        -Long id
        -String nombre
        -String descripcion
        -String tipoSustancia
        -String color
        -boolean toxico
        -boolean natural
        -Nivel peligrosidad
        -Long phSustancia
        -list<Precauciones> precauciones
        -LocalDateTime fechaCreacion
        +getId() Long
        +getNombre() String
        +getDescripcion() String
    }
    class TipoMancha {
        -String categoriaMancha
        -String origenMancha
        -Nivel dificultadLimpieza
        -boolean seFijaConCalor
        -boolean urgente
        -double tiempoSecadoHoras
        +getCategoria() String
        +getDificultad() String
        +isUrgente() boolean
    }
    class Ingrediente {
        -String tipoIngrediente
        -String propiedades
        -boolean disponibleSupermercado
        +isDisponibleSupermercado() boolean
        +getPrecauciones() String
        +getPhIngrediente() double
        +getTipoIngrediente() String
        +getPropiedades() String
    }

    class Utensilio {
        -Long id
        -String nombre
        -String descripcion
        -boolean reutilizable
        -boolean desechable
        -String material
        -String tamaño
        +getId() Long
        +getNombre() String
        +isReutilizable() boolean
        +isDesechable() boolean
    }

%% Clase principal SolucionLimpieza (una solucion de limpieza tiene ingredientes, trata manchas y es para
%% materiales, tiene instrucciones, efectividad, dificultad, consejos y advertencias)
    class SolucionLimpieza {
        -Long id
        -String titulo
        -String instrucciones
        -Integer tiempoMinutos
        -Nivel dificultad
        -Integer efectividad
        -Precauciones advertencias
        -String consejos
        -boolean casero
        -List<Utensilio> utensilios
        -List<Ingrediente> ingredientes
        -List<TipoMancha> manchas
        -Categoria categoria
        -LocalDateTime fechaCreacion
        +getId() Long
        +getTitulo() String
        +getInstrucciones() String
        +getEfectividad() Integer
        +isCasero() boolean
    }

    class Precauciones {
        -Long id
        -String descripcion
        -Sustancia sustancia;
        +getDescripcion() String
        +getNivelRiesgo() String
    }

    class SolucionFavorita {
        -Long id
        -String notas
        -LocalDateTime fechaGuardado
        -boolean probado
        -Integer valoracion
        +getId() Long
        +getNotas() String
        +isProbado() boolean
        +getValoracion() Integer
    }
    class enum Categoria {

    }

    class Enum_Nivel {
        NONE
        LOW
        MEDIUM
        HIGH
        CRITICAL
    }

    class Enum_Acabado {
        MATE
        BRILLANTE
        SATINADO
        TEXTURIZADO
    }
--------------------------------------------
%% Clase abstracta Persona
    class Persona {
        -Long id
        -String nombre
        -String apellidos
        -String email
        -String username
        -String password
        +getUsername() String
        +getEmail() String
    }
    class UsuarioBase {
        -boolean activo
        -boolean premium
        -List<Categoria> categoriasPreferidas
        -List<SolucionFavorita> solucionesGuardadas
        -LocalDateTime fechaRegistro
        +isActivo() boolean
        +isPremium() boolean
    }
    class Administrador {
        List<String> permisos
        -boolean superAdmin
        +isSuperAdmin() boolean
        +permisosAvanzados: boolean
    }

    class Permisos {
        -String nombre
        -String descripcion
        +getNombre() String
    }

%% Herencias
    Material <|-- Tela
    Material <|-- Superficie
    Sustancia <|-- TipoMancha
    Sustancia <|-- Ingrediente
    Persona <|-- UsuarioBase
    Persona <|-- Administrador
%% Relaciones Negocio
SolucionLimpieza o-- "1..*" Ingrediente: incluye
SolucionLimpieza o-- "0..*" Utensilio: usa
SolucionLimpieza o-- "1..*" TipoMancha: trata
SolucionLimpieza o-- "1..*" Material: para
SolucionLimpieza o-- "0..*" Precauciones: tiene advertencias
Sustancia o-- "0..*" Precauciones: tiene
SolucionFavorita o-- "1" SolucionLimpieza: referencia

--------------------------------------------------------------
%% Relaciones Usuario
UsuarioBase o-- "0..*" Categoria: pertenece
UsuarioBase o-- "0..*" SolucionFavorita: guarda
UsuarioBase o-- "1" Persona: extiende

%% Relaciones Administrador
Administrador o-- "1" Persona: extiende
Administrador o-- "0..*" Categoria: gestiona
Administrador o-- "0..*" SolucionLimpieza: gestiona
Administrador o-- "0..*" Sustancia: gestiona
Administrador o-- "0..*" Material: gestiona


%% Notas
note for Material "Clase base para Tela y Superficie (JOINED)"
note for Sustancia "Clase abstracta común para manchas e ingredientes"
note for SolucionLimpieza "Incluye pasos, ingredientes y advertencias"
note for UsuarioBase "Jerarquía de usuarios: Usuario y Admin"
note for Sustancia "JOINED Strategy - Padre de TipoMancha e Ingrediente"
note for Material "JOINED Strategy - Padre de Tela y Superficie"
note for SolucionLimpieza "Una solución sirve para múltiples manchas y materiales"
note for TipoMancha "Ejemplo: 'Vino Tinto' puede tener 5 soluciones diferentes"
note for Material "Ejemplo: 'Algodón' puede tener soluciones para 10 tipos de mancha"
note for Ingrediente "Ejemplo: 'Bicarbonato' se usa en múltiples soluciones"
note for Precaudiones "lista de Precauciones para cada sustancia, Ejemplo: 'No mezclar con lejía'"
